--- a/index.html
+++ b/index.html
@@ -1,63 +1,124 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P59 Integrador</title>
-    <script src="assets/js/jquery.js"></script>
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/all.css">
-    <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    
-</head>
-<body>
-    <main>
-        <!-- Header -->
-        <div class="m-2">
-            <header class="d-flex flex-wrap justify-content-end py-3 mb-4 border-bottom">   
-                <ul class="nav nav-pills">
-                    <li>
-                        <a href="https://github.com/Sama3liz/integrador" class="btn btn-secondary" target="_blank">
-                            GitHub
-                        </a>
-                    </li>
-                </ul>
-            </header>
-        </div>
-        <!-- ./Header -->
-        <!-- Content -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10">
-                    <div class="container" id="container1"></div>
-                    <div class="container" id="container2"></div>
-                    <div class="container" id="container3"></div>
-                </div>
-                <div class="col-md-2">
-                    <select id="select" class="form-select">
-                        <option value="Jan">January</option>
-                        <option value="Feb">February</option>
-                        <option value="Mar">March</option>
-                        <option value="Apr">April</option>
-                        <option value="May">May</option>
-                        <option value="Jun">June</option>
-                    </select>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>P59 Integrador</title>
+        <script src="assets/js/jquery.js"></script>
+        <link rel="stylesheet" href="assets/css/bootstrap.css">
+        <link rel="stylesheet" href="assets/css/all.css">
+        <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
+        <script src="assets/js/bootstrap-datepicker.js"></script>
+        <link rel="stylesheet" href="assets/css/bootstrap-datepicker3.standalone.css">
+    </head>
+    <body>
+        <main>
+            <!-- Header -->
+            <div class="m-2">
+                <header class="d-flex flex-wrap justify-content-end py-3 mb-4 border-bottom">   
+                    <ul class="nav nav-pills">
+                        <li>
+                            <a href="https://github.com/Sama3liz/integrador" class="btn btn-secondary" target="_blank">
+                                GitHub
+                            </a>
+                        </li>
+                    </ul>
+                </header>
+            </div>
+            <!-- ./Header -->
+            <!-- Content -->
+            <div class="container border-bottom py-3 mb-4">
+                <div class="row">
+                    <!-- Grafica -->
+                    <div class="col-md-9">
+                        <div class="container" id="container1"></div>
+                        <div class="container" id="container2"></div>
+                        <div class="container" id="container3"></div>
+                    </div>
+                    <!-- Controles grafica -->
+
+                    <div class="col-md-3">
+                        <!-- Filtro -->
+                        <div class="border-bottom py-2">
+                            <label for="filtros" class="mb-1">Elige un filtro a mostrar</label>
+                            <select id="select" class="form-select">
+                                <option value="Jan">January</option>
+                                <option value="Feb">February</option>
+                                <option value="Mar">March</option>
+                                <option value="Apr">April</option>
+                                <option value="May">May</option>
+                                <option value="Jun">June</option>
+                            </select>
+                        </div>
+                        <!-- Rango fechas -->
+                        <div class="border-bottom py-2">
+                            <label for="rangoFecha" class="mb-1">Elegir un rango de fechas</label>
+                            <div class="input-group input-daterange">
+                                <input type="text" class="form-control" value="2021-12-09">
+                                <div class="input-group-addon m-2 d-block">to</div>
+                                <input type="text" class="form-control" value="2021-12-09">
+                            </div>
+                        </div>
+                    </div>
+                    <pre id="data" style="display: none;">
+                        Nick,1,2,3,9,12,33
+                        Ann,5,6,7,4,23,8
+                        Joe,7,8,9,2,21,14
+                    </pre>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <pre id="data">
-                Nick,1,2,3,9,12,33
-                Ann,5,6,7,4,23,8
-                Joe,7,8,9,2,21,14
-            </pre>
-        </div>
-        <!-- ./Content -->
-    </main>
-</body>
-<script type='text/javascript' src="assets/js/bootstrap.bundle.js"></script>
-<script src="assets/js/app.js"></script>
+            <div class="container">
+                <!-- Tabla -->
+                <div class="row">
+                    <!-- Tabla -->
+                    <div class="table-responsive col-md-9">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">First</th>
+                                    <th scope="col">Last</th>
+                                    <th scope="col">Handle</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>@fat</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td colspan="2">Larry the Bird</td>
+                                    <td>@twitter</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- Controles tabla -->
+                    <div class="col-md-3">
+                        <div class="d-grip gap-2 mx-auto col-lg-2 col-md-1 col-sm-4 justify-content-center">
+                            <button type="button" class="btn btn-outline-primary m-1">PDF</button>
+                            <button type="button" class="btn btn-outline-secondary m-1">TXT</button>
+                            <button type="button" class="btn btn-outline-danger m-1">PNG</button>
+                            <button type="button" class="btn btn-outline-info m-1">JSON</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ./Content -->
+        </main>
+    </body>
+    <script type='text/javascript' src="assets/js/bootstrap.bundle.js"></script>
+    <script src="assets/js/app.js"></script>
 </html>
